Fix the style (width) on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,12 +9,15 @@ body {
   font-weight:300;
 }
 
-header {
-  width: 240px
+@media print, screen and (min-width: 960px) {
+  header {
+    width: 240px
+  }
+  section {
+    width: 600px;
+  }
 }
-section {
-  width: 600px;
-}
+
 
 
 h1, h2, h3, h4, h5, h6 {
